Removed schema.org microdata from flat2- see http://1stopit.blogspot.co.uk/2013/09/describing-package-tours-with-schemaorg.html

--- a/views/flat2photos.html
+++ b/views/flat2photos.html
@@ -1,32 +1,32 @@
-<section class="row-fluid" itemscope itemtype="http://schema.org/Hotel">
-    <div class="img-polaroid img-polaroid-main" itemscope itemtype="http://schema.org/ImageObject">
-        <img src="/images/960x340/14.jpg" alt="Hotel Entrance" itemprop="contentUrl" />
-    </div>
+<section class="row-fluid">
+    <figure class="img-polaroid img-polaroid-main">
+        <img src="/images/960x340/14.jpg" alt="Hotel Entrance"/>
+    </figure>
     <h2>{{#__}}flat2photos{{/__}}</h2>
-    <div itemscope itemtype="http://schema.org/ImageGallery">
-        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
+    <div itemscope>
+        <div class="span4" >
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/1.jpg" alt="2 Single Beds" itemprop="http://schema.org/image" />
+                <img src="/images/2flat300x300/1.jpg" alt="2 Single Beds"/>
             </div>
         </div>
-        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
+        <div class="span4" >
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/2.jpg" alt="Wardrobe and TV Set" itemprop="http://schema.org/image" />
+                <img src="/images/2flat300x300/2.jpg" alt="Wardrobe and TV Set"/>
             </div>
         </div>
-        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
+        <div class="span4" >
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/3.jpg" alt="Couch and Table" itemprop="http://schema.org/image" />
+                <img src="/images/2flat300x300/3.jpg" alt="Couch and Table"/>
             </div>
         </div>
-        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
+        <div class="span4" >
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/4.jpg" alt="Mirror and Plant" itemprop="http://schema.org/image"/>
+                <img src="/images/2flat300x300/4.jpg" alt="Mirror and Plant"/>
             </div>
         </div>
-        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
+        <div class="span4" >
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/5.jpg" alt="Bathroom Mirror and Sink" itemprop="http://schema.org/image" />
+                <img src="/images/2flat300x300/5.jpg" alt="Bathroom Mirror and Sink"/>
             </div>
         </div>
     </div>
