--- a/views/hotelphotos.html
+++ b/views/hotelphotos.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
-    <div class="img-polaroid img-polaroid-main">
+    <figure class="img-polaroid img-polaroid-main">
         <img src="/images/960x340/4.jpg" alt="Children in traditional bulgarian dress" />
-    </div>
+    </figure>
 </div>
 <h2 class="row-fluid">{{#__}}exteriorinteriorphotos{{/__}}</h2>
 <div class="row-fluid">
@@ -79,5 +79,5 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/22.png" alt="Front garden - lamp post"/>
             </div>
-        </div
+        </div>
 </div>
