Dealing with history.back() AJAX request - not finished

--- a/views/booking.html
+++ b/views/booking.html
@@ -16,7 +16,7 @@
                         <option value="Flat 2">{{#__}}flat{{/__}} 2</option>
                         <option value="Flat 3">{{#__}}flat{{/__}} 3</option>
                         <option value="Flat 4">{{#__}}flat{{/__}} 4</option>
-                        <option value="Whole House">Whole House</option>
+                        <option value="Whole House">{{#__}}whole-house{{/__}}</option>
                 </select>
         </p>
         {{#__}}selectareservationstartdate{{/__}}
