--- a/views/contact.html
+++ b/views/contact.html
@@ -18,14 +18,14 @@
         <span>{{#__}}hotelowner{{/__}}: {{#__}}kiriltrifonov{{/__}}</span>
     <address>
         <span>{{#__}}housenumber{{/__}}: 47</span><br>
-        <span>{{#__}}street{{/__}}: 3 {{#__}}Street{{/__}}</span><br>
+        <span>{{#__}}street{{/__}}: {{#__}}street{{/__}} 3</span><br>
         <span>{{#__}}place{{/__}}: {{#__}}Albena{{/__}}</span><br>
         <span>{{#__}}region{{/__}}: {{#__}}Dobrich{{/__}}</span><br>
         <span>{{#__}}country{{/__}}: {{#__}}Bulgaria{{/__}}</span><br>
         <span>{{#__}}telephone{{/__}}: </span><a href="tel:+359 888731414">+359 888 73 14 14</a><br>
         <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com">kontakti@house-sezoni.com</a>
     </address>
-    <span>{{#__}}openinghours{{/__}}: </span><time>Monday through Sunday, all day</time>
+    <span>{{#__}}openinghours{{/__}}: </span><time>{{#__}}monday-through-sunday{{/__}}</time>
   </div>
   <div class="span5 fb-holder">
     <div class="fb-like-box" data-href="https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%B3%D0%BE%D1%81%D1%82%D0%B8-%D0%A1%D0%95%D0%97%D0%9E%D0%9D%D0%98-%D0%BA%D0%BA%D0%90%D0%BB%D0%B1%D0%B5%D0%BD%D0%B0/1405059436417534" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
