--- a/views/header.html
+++ b/views/header.html
@@ -2,7 +2,7 @@
 	<input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
 	<nav id="main-nav" class="{{currentpage}}">
 	    <ul>
-	        <li><a class="js-nav" href="/{{lang}}/">{{#__}}home{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}">{{#__}}home{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagebooking{{/__}}">{{#__}}booking{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagegallery{{/__}}">{{#__}}gallery{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pageservices{{/__}}">{{#__}}services{{/__}}</a>
