--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="description" content="">
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <title>{{title}}</title>
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
         {{#cssList}}
