--- a/views/gallery.html
+++ b/views/gallery.html
@@ -8,37 +8,37 @@
 	<p>{{#__}}gallerymaindesc{{/__}}</p>
 </section>
 <div class="row-fluid">
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}hotelphotosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pagehotelphotos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/10.jpg" alt="Hotel Exterior" />
             </div>
             <h3 class="pagination-centered">{{#__}}exteriorinteriorphotos{{/__}}</h3>
         </a>
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}flat1photosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pageflat1photos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/1flat300x300/1.jpg" alt="Flat 1"/>
             </div>
             <h3 class="pagination-centered">{{#__}}flat1photos{{/__}}</h3>
         </a>
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}flat2photosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pageflat2photos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/2flat300x300/1.jpg" alt="Flat 2"/>
             </div>
             <h3 class="pagination-centered">{{#__}}flat2photos{{/__}}</h3>
         </a>
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}flat3photosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pageflat3photos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/3flat300x300/1.jpg" alt="Flat 3"/>
             </div>
             <h3 class="pagination-centered">{{#__}}flat3photos{{/__}}</h3>
         </a>
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}flat4photosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pageflat4photos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/4flat300x300/1.jpg" alt="Flat 4"/>
             </div>
             <h3 class="pagination-centered">{{#__}}flat4photos{{/__}}</h3>
         </a>
-        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}diningphotosurl{{/__}}" class="span4 js-nav">
+        <a href="/{{lang}}/{{#__}}pagegallery{{/__}}/{{#__}}pagediningphotos{{/__}}" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/dining300x300/1.jpg" alt="Dining Area"/>
             </div>
