--- a/views/location.html
+++ b/views/location.html
@@ -10,8 +10,8 @@
         <p itemprop="description">
             {{#__}}homelocation{{/__}}{{#__}}locationtmaindesc{{/__}}
         </p>
-        <div id="map-container" itemprop="geo" itemscope itemtype="http://schema.org/GeoCoordinates">
-            <div id="map-canvas" itemprop="maps">
+        <div itemprop="geo" itemscope itemtype="http://schema.org/GeoCoordinates">
+            <div id="map-canvas" itemprop="maps" data-pin-label="<div class='map-info-window'>{{#__}}headerh1{{/__}}</div>">
                 <noscript>
                     <img src="/images/map/Albena-Fish-Fish-Bird-View-Map-Pin.png" alt="Bird's eye Albena map"/>
                 </noscript>
